@@ -395,6 +395,22 @@ class TestGemSourceIndex < RubyGemTestCase
     assert_equal [updated_platform.name], @source_index.outdated
   end
 
+  def test_refresh_bang
+    a1_spec = File.join @gemhome, "specifications", "#{@a1.full_name}.gemspec" 
+
+    FileUtils.mv a1_spec, @tempdir
+
+    source_index = Gem::SourceIndex.from_installed_gems
+
+    assert !source_index.gems.include?(@a1.full_name)
+
+    FileUtils.mv File.join(@tempdir, "#{@a1.full_name}.gemspec"), a1_spec
+
+    source_index.refresh!
+
+    assert source_index.gems.include?(@a1.full_name)
+  end
+
   def test_remove_extra
     @source_index.add_spec @a1
     @source_index.add_spec @a2
